--- a/users/templates/users/log_in.html
+++ b/users/templates/users/log_in.html
@@ -7,6 +7,8 @@
     <title>ReWork - Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'users/css/user_authentication.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
 </head>
 <body class="log_in_body">
     {% include 'users/welcome_page_navbar.html' %}
@@ -14,7 +16,7 @@
     <div class="container-login">
         <div class="card">
             <h1 class="quote text-center">
-                "Your journey back to work starts with a single step—take it with confidence, and we'll guide you the rest of the way."
+                Your journey back to work starts with a single step—take it with confidence, and we'll guide you the rest of the way.
             </h1>
             {% if form.non_field_errors %}
                 <div class="error-custom text-center">
@@ -26,18 +28,33 @@
 
             <form method="POST" class="mt-3">
                 {% csrf_token %}
+            
                 {% for field in form %}
-                    <div class="mb-3">
-                        {{ field }}
-
+                    <div class="mb-3 position-relative">
+                        {% if field.field.widget.input_type == "password" %}
+                            <div class="password-container">
+                                {{ field }}
+                                <span class="toggle-password">
+                                    <i class="bi bi-eye-slash"></i>
+                                </span>
+                            </div>
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
                     </div>
                 {% endfor %}
+            
                 <button type="submit">Log In</button>
             </form>
-            <a href="{% url 'sign_up_step_1' %}">Dont have an account? Sign Up</a>
-            <a href="{% url 'reset_password' %}">Forget password?</a>
+            
+            <a href="{% url 'sign_up_step_1' %}">Don't have an account? Sign Up</a>
+            <a href="{% url 'change_password' %}">Forgot password?</a>
+            
         </div>
     </div>
+
+    <script src="{% static 'users/js/toggle_password.js' %}"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
