--- a/users/templates/users/log_in.html
+++ b/users/templates/users/log_in.html
@@ -48,7 +48,7 @@
             </form>
             
             <a href="{% url 'sign_up_step_1' %}">Don't have an account? Sign Up</a>
-            <a href="{% url 'change_password' %}">Forgot password?</a>
+            <a href="">Forgot password?</a>
             
         </div>
     </div>
