editing the order of modules in program

--- a/client/templates/client/all_programs.html
+++ b/client/templates/client/all_programs.html
@@ -9,7 +9,7 @@
     
     </head>
     <body class="create_program">
-        {% include 'client/cliet_base.html' %}
+        {% include 'client/client_base.html' %}
 
         <div class="text-center mt-4">
             <a href="{% url 'create_program' %}" class="btn btn-primary">
@@ -17,6 +17,5 @@
             </a>
         </div>
         
-
     </body>
 </html>
