--- a/client/templates/client/modules_management.html
+++ b/client/templates/client/modules_management.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/modules_management.css' %}">
+<link rel="stylesheet" href="{% static 'client/css/modules_management.css' %}">
 {% endblock %}
 
 {% block content %}
