--- a/client/templates/client/programs.html
+++ b/client/templates/client/programs.html
@@ -1,4 +1,4 @@
-{% extends 'client/client_base.html' %}
+{% extends 'client/base.html' %}
 
 {% block title %}
     Programs
@@ -24,7 +24,7 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             column-gap: 40px; 
-            row-gap: 60px;
+            row-gap: 80px;
             justify-content: center;
             align-items: stretch;
         }
@@ -82,30 +82,6 @@
         .module-list li {
             font-size: 12px;
             line-height: 1.4;
-        }
-
-        .progress-bar {
-            width: 100%;
-            height: 5px;
-            background-color: rgba(255, 255, 255, 0.3);
-            border-radius: 3px;
-            margin-top: 15px;
-            position: relative;
-        }
-
-        .progress-fill {
-            height: 100%;
-            background-color: white;
-            border-radius: 3px;
-            width: 0;
-            transition: width 0.5s ease-in-out;
-        }
-
-        .progress-text {
-            font-size: 12px;
-            display: block;
-            margin-top: 5px;
-            text-align: center;
         }
 
         .add-card {
@@ -184,18 +160,13 @@
                 <p>{{ program.description|truncatewords:20 }}</p>
             
                 <ul class="module-list">
-                    {% for module in program.modules.all %}
-                        <li>{{ module.title }}</li>
+                    {% for pm in program.program_modules.all %}
+                        <li>{{ pm.module.title }}</li>
                     {% empty %}
                         <li>No modules assigned.</li>
                     {% endfor %}
-                </ul>
+                </ul>                
             
-                <div class="progress-bar">
-                    <div class="progress-fill" style="width: {{ program.progress|default:0 }}%;"></div>
-                </div>
-                <span class="progress-text">{{ program.progress|default:0 }}% Complete</span>
-
                 <div class="buttons">
                     <a href="{% url 'program_detail' program.id %}" class="view-btn">View</a>
                     <a href="{% url 'delete_program' program.id %}" class="delete-btn" onclick="return confirm('Are you sure you want to delete this program?');">Delete</a>
