--- a/client/templates/client/program_detail.html
+++ b/client/templates/client/program_detail.html
@@ -144,6 +144,8 @@
     </ul>
     <button onclick="saveModuleOrder()" class="btn-save">Save Order</button>
 
+    <button class="btn-save" onclick="openModal('moduleModal')">Add More Modules</button>
+
     <h2>Enrolled Users:</h2>
     <table class="users-table">
         <thead>
@@ -192,6 +194,28 @@
                     {% endfor %}
                 </div>
                 <button type="submit" class="btn-save">Add Selected Users</button>
+            </form>
+        </div>
+    </div>
+
+    <div id="moduleModal" class="modal-overlay">
+        <div class="modal-content">
+            <span class="modal-close" onclick="closeModal('moduleModal')">&times;</span>
+            <h2>Add More Modules</h2>
+            <form method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="add_modules" value="1">
+                <div class="checkbox-list">
+                    {% for module in all_modules %}
+                        {% if module.id not in program_module_ids %}
+                            <label>
+                                <input type="checkbox" name="modules_to_add" value="{{ module.id }}">
+                                {{ module.title }}
+                            </label>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <button type="submit" class="btn-save">Add Selected Modules</button>
             </form>
         </div>
     </div>
@@ -271,6 +295,14 @@
             }
         })
         .catch(error => console.error("Request failed:", error));
+    }
+
+    function openModal(modalId) {
+        document.getElementById(modalId).style.display = 'block';
+    }
+
+    function closeModal(modalId) {
+        document.getElementById(modalId).style.display = 'none';
     }
 </script>
 
