Fix linking problem in files.

--- a/client/templates/client/client_dashboard.html
+++ b/client/templates/client/client_dashboard.html
@@ -1,5 +1,5 @@
 <!-- index.html -->
-{% extends 'client/base.html' %}
+{% extends 'client/client_base.html' %}
 {% load static %}
 
 {% block extra_css %}
