--- a/client/templates/client/Manage_Questionnaires.html
+++ b/client/templates/client/Manage_Questionnaires.html
@@ -1,4 +1,4 @@
-{% extends 'client/base.html' %}
+{% extends 'client/client_base.html' %}
 {% load static %}
 
 {% block title %}Manage Questionnaires{% endblock %}
