--- a/client/templates/client/view_responders.html
+++ b/client/templates/client/view_responders.html
@@ -1,4 +1,4 @@
-{% extends 'client/base.html' %}
+{% extends 'client/client_base.html' %}
 {% load static %}
 
 {% block title %}Responders - {{ questionnaire.title }}{% endblock %}
