--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -107,19 +107,18 @@
     </div>
 
 
-    <!-- ✅ Recently Accessed Modules Box -->
-<div class="recently-accessed">
-    <h3>Recently Accessed Modules</h3>
-    <ul class="recent-modules-list">
-        {% for enrollment in recent_modules %}
-            <li class="recent-module-item">
-                <a href="{% url 'module_overview' enrollment.module.id %}">{{ enrollment.module.title }}</a>
-            </li>
-        {% empty %}
-            <li class="no-modules">No recently accessed modules.</li>
-        {% endfor %}
-    </ul>
-</div>
+    <div class="recently-accessed">
+        <h3>Recently Accessed Modules</h3>
+        <ul class="recent-modules-list">
+            {% for module in recent_modules %}
+                <li class="recent-module-item">
+                    <a href="{% url 'module_overview' module.id %}">{{ module.title }}</a>
+                </li>
+            {% empty %}
+                <li class="no-modules">No recently accessed modules.</li>
+            {% endfor %}
+        </ul>
+    </div>
 
 
 
