Organize the code to push

--- a/client/templates/client/client_dashboard.html
+++ b/client/templates/client/client_dashboard.html
@@ -14,7 +14,7 @@
                 <img src="{% static 'client/img/profile.svg' %}" alt="Profile" class="icon">
                 <h2>Manage Users</h2>
             </div>
-            <div class="card orders" data-url="{% url 'modules_management' %}">
+            <div class="card orders" data-url="{% url 'client_modules' %}">
                 <img src="{% static 'client/img/modules.svg' %}" alt="Modules" class="icon">
                 <h2>Manage Modules</h2>
             </div>
