--- a/users/templates/users/contact_us.html
+++ b/users/templates/users/contact_us.html
@@ -7,6 +7,7 @@
     <title>ReWork - Contact us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'users/css/user_authentication.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/contact_us_and_about.css' %}">
 </head>
 <body class="contact_body">
 
